<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/logo_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/logo_margin_buttom"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:src="@drawable/logo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="@dimen/consume_main_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:padding="@dimen/consume_contant_padding" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ece7e3"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/consume_contant_padding" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="项目详情" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/consume_contant_padding" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="名称" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="价格" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="状态" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#77112211" />

                <ListView
                    android:id="@+id/lv_consume_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </ListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical"
                android:padding="@dimen/consume_contant_padding" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ece7e3"
                    android:gravity="center_vertical"
                    android:padding="@dimen/consume_contant_padding"
                    android:text="顾客资料" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/consume_contant_padding" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="姓名:" />

                    <EditText
                        android:id="@+id/et_consume_info_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/bg_corner_black"
                        android:hint="时岩"
                        android:padding="3dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:gravity="center_vertical"
                        android:text="性别:" />

                    <EditText
                        android:id="@+id/et_consume_info_sex"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_corner_black"
                        android:hint="男"
                        android:padding="3dp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:gravity="center_vertical"
                        android:text="手机号码:" />

                    <EditText
                        android:id="@+id/et_consume_info_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/bg_corner_black"
                        android:hint="17702707750"
                        android:padding="3dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ece7e3"
                    android:gravity="center_vertical"
                    android:padding="@dimen/consume_contant_padding"
                    android:text="服务人员" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/ll_consume_info_fxs"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edittext_normal"
                        android:orientation="vertical"
                        android:padding="@dimen/consume_consume_item_padding" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/consume_consume_waiter_img_width"
                            android:scaleType="centerInside"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/icon1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/name_fxs" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_consume_info_trs"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edittext_normal"
                        android:orientation="vertical"
                        android:padding="@dimen/consume_consume_item_padding" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/consume_consume_waiter_img_width"
                            android:scaleType="centerInside"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/icon2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/name_trs" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_consume_info_zl"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edittext_normal"
                        android:orientation="vertical"
                        android:padding="@dimen/consume_consume_item_padding" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/consume_consume_waiter_img_width"
                            android:scaleType="centerInside"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/icon3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/name_zl" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_consume_info_hjgw"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edittext_normal"
                        android:orientation="vertical"
                        android:padding="@dimen/consume_consume_item_padding" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/consume_consume_waiter_img_width"
                            android:scaleType="centerInside"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/icon4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/name_hjgw" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_consume_info_tpds"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edittext_normal"
                        android:orientation="vertical"
                        android:padding="@dimen/consume_consume_item_padding" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/consume_consume_waiter_img_width"
                            android:scaleType="centerInside"
                            android:contentDescription="头皮导师"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/icon5" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/name_tpds" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:onClick="comfirmbuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/button1" />
    </LinearLayout>

</LinearLayout>